# docs/swagger.yaml
@@ -33,8 +33,6 @@ definitions:
         type: integer
       b_5:
         type: integer
-      b_6:
-        type: integer
     type: object
   model.Choice:
     properties:
@@ -401,7 +399,7 @@ paths:
       responses:
         "200":
           description: 删除成功
-        "204":
+        "203":
           description: 删除失败,用户未选择该标签
         "400":
           description: '{"error_code":"20001", "message":"Fail."} or {"error_code":"00002",
@@ -511,7 +509,7 @@ paths:
       responses:
         "200":
           description: 新增标签成功
-        "204":
+        "203":
           description: 该标签已选择
         "400":
           description: '{"error_code":"20001", "message":"Fail."} or {"error_code":"00002",
@@ -528,6 +526,37 @@ paths:
           schema:
             $ref: '#/definitions/error.Error'
       summary: 增加标签
+      tags:
+      - punch
+  /punch/month:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            items:
+              $ref: '#/definitions/model.Punch'
+            type: array
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/error.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"Fail."} 失败'
+          schema:
+            $ref: '#/definitions/error.Error'
+      summary: 获取某用户月报
       tags:
       - punch
   /punch/punch/{id}:
@@ -551,8 +580,6 @@ paths:
             type: array
         "203":
           description: 未找到该用户
-        "204":
-          description: 获取失败,用户未公开标签
         "400":
           description: '{"error_code":"20001", "message":"Fail."} or {"error_code":"00002",
             "message":"Lack Param Or Param Not Satisfiable."}'
